<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPostsActivity">

    <FrameLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_shape">

        <TextView
            android:id="@+id/action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/main_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/action_bar_text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_bar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/offer_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/offer_error_text"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/user_offer_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin_small"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_offer_heading_text"
                android:textAlignment="center"
                android:textSize="@dimen/action_bar_text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_small">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_travel_departure" />

                <TextView
                    android:id="@+id/offer_ride_departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_small">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_travel_destination" />

                <TextView
                    android:id="@+id/offer_ride_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_small">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_travel_date" />

                <TextView
                    android:id="@+id/offer_ride_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/offer_ride_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/applied_text" />

            <ListView
                android:id="@+id/offer_list_applicants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin" />

        </LinearLayout>

        <TextView
            android:id="@+id/user_request_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/request_error_text"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/user_request_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin_small"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_small"
                android:text="@string/user_request_heading_text"
                android:textAlignment="center"
                android:textSize="@dimen/action_bar_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_small">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_travel_departure" />

                <TextView
                    android:id="@+id/request_ride_departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_small">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_travel_destination" />

                <TextView
                    android:id="@+id/request_ride_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_small">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_travel_date" />

                <TextView
                    android:id="@+id/request_ride_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/request_ride_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin_small"
                    android:textSize="@dimen/item_text_size" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/applied_text" />

            <ListView
                android:id="@+id/request_list_applicants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>